# qt6

00_QT6/QT6_1_5_Test_Dialog/Test_Dialog/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
00_QT6/QT6_1_5_Test_Dialog/build-Test_Dialog-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  CMakeCache.txt  build.ninja  qtcsettings.cmake
00_QT6/QT6_3_14_Push_Button/Push_Button/: dialog.cpp  dialog.h  main.cpp
00_QT6/QT6_3_14_Push_Button/build-QT6_3_14_Push_Button-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_log  build.ninja  qtcsettings.cmake
00_QT6/QT6_3_35_Signal_And_Slot/build-Signal_And_Slot-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  cmake_install.cmake
03_qt-widgets-beginners/build-qtwb-11-1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
03_qt-widgets-beginners/build-qtwb-11-1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
03_qt-widgets-beginners/build-qtwb-11-1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/debug/: moc_dialog.cpp  moc_equation.cpp
QT6/Getting_Started/: CMakeLists.txt  main.cpp  test.cpp  test.h
QT6/QT6_1_5_Test_Dialog/Test_Dialog/: dialog.ui
QT6/QT6_3_14_Push_Button/Push_Button/: CMakeLists.txt  dialog.ui
QT6/QT6_3_35_Signal_And_Slot/Signal_And_Slot/: CMakeLists.txt  main.cpp  test.cpp  test.h
QT6/build-Getting_Started-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT_Mini_Projects/Get_Folder_Data/Get_Folder_Items/: CMakeLists.txt  main.cpp  maindirectory.cpp  maindirectory.h
(+181 files in other folders)
